prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/interp_str_not_string_2.diag.txt
ERROR: expected 'STRING_LITERAL'
testData/diagnostics/interp_str_not_string_2.nut:5:9

println($foo())
         ^--


